--- a/index_3.7.html
+++ b/index_3.7.html
@@ -1,63 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-    <body>
-        <div id="root"></div>
-    </body>
-    <script src="https://unpkg.com/react@17.0.2/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script type="text/babel">
-        const root = document.getElementById("root");
+  <body>
+    <div id="root"></div>
+  </body>
+  <script src="https://unpkg.com/react@17.0.2/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script type="text/babel">
+    const root = document.getElementById("root");
 
-        const countUp = () => {
-            counter += 1;
-            console.log("count" + counter);
-            render();
-        };
+    const countUp = () => {
+      counter += 1;
+      console.log("count" + counter);
+      render();
+    };
 
-        const App = () => {
-            const [minutes, setMinutes] = React.useState();
+    const App = () => {
+      const [amount, setMinutes] = React.useState();
+      const [flipped, setFlipped] = React.useState(false);
 
-            const [hours, setHours] = React.useState();
+      const onChange = (event) => {
+        setMinutes(event.target.value);
+      };
 
-            const onChange = (event) => {
-                setMinutes(event.target.value);
-            };
+      const reset = () => setMinutes(0);
+      const onFlip = () => {
+        reset();
+        setFlipped((current) => !current);
+      };
 
-            const reset = () => setMinutes(0);
+      return (
+        <div>
+          <h3>Super Converter</h3>
 
-            return (
-                <div>
-                    <h3>Super Converter</h3>
+          <div>
+            <div>
+              <label htmlFor="minutes">Minutes </label>
+              <input
+                value={flipped ? amount * 60 : amount}
+                id="minutes"
+                placeholder="Minutes"
+                type="number"
+                onChange={onChange}
+                disabled={flipped}
+              ></input>
+            </div>
 
-                    <div>
-                        <div>
-                            <label htmlFor="minutes">Minutes </label>
-                            <input
-                                value={minutes}
-                                id="minutes"
-                                placeholder="Minutes"
-                                type="number"
-                                onChange={onChange}
-                            ></input>
-                        </div>
+            <h4>You Want to Convert {amount}</h4>
+            <div>
+              <label htmlFor="Hours">Hours </label>
+              <input
+                value={flipped ? amount : Math.round(amount / 60)}
+                id="hours"
+                placeholder="Hours"
+                type="number"
+                onChange={onChange}
+                disabled={!flipped}
+              ></input>
+            </div>
+            <button onClick={reset}>Reset</button>
+            <button onClick={onFlip}>Flip</button>
+          </div>
+        </div>
+      );
+    };
 
-                        <h4>You Want to Convert {minutes}</h4>
-                        <div>
-                            <label htmlFor="Hours">Hours </label>
-                            <input
-                                value={minutes / 60}
-                                id="hours"
-                                placeholder="Hours"
-                                type="number"
-                            ></input>
-                        </div>
-                        <button onClick={reset}>Reset</button>
-                    </div>
-                </div>
-            );
-        };
-
-        ReactDOM.render(<App />, root);
-    </script>
+    ReactDOM.render(<App />, root);
+  </script>
 </html>
